# templix

./: .gitignore  LICENSE.md  README.md  pyproject.toml
.github/workflows/: publish.yml
templix/: __main__.py  build.py
